--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -25,5 +25,7 @@ jobs:
         run: pip install scipy
       - name: install pandas
         run: pip install pandas
+      - name: install matplotlib
+        run: pip install matplotlib
       - name: Run tests with pytest
         run: python3 -m pytest
